fix dark mode?

--- a/src/scss/tools/_index.scss
+++ b/src/scss/tools/_index.scss
@@ -9,11 +9,11 @@
  */
 @mixin dark-mode() {
   @media (prefers-color-scheme: dark) {
-    :root {
+    & {
       --color-mode: 'dark';
     }
 
-    :root:not([data-user-color-scheme]) {
+    &:not([data-user-color-scheme]) {
       @content;
     }
   }
